fix: implement better dark mode styles

--- a/src/components/JobLocation/JobFilters/components/AccordionItem/AccordionItem.module.scss
+++ b/src/components/JobLocation/JobFilters/components/AccordionItem/AccordionItem.module.scss
@@ -14,6 +14,14 @@
 .chevron {
   @include transition($transition-base-short);
 
+  @include light {
+    color: var(--mantine-color-gray-9);
+  }
+
+  @include dark {
+    color: var(--mantine-color-gray-5);
+  }
+
   &[data-rotate] {
     transform: rotate(-180deg);
   }
@@ -21,4 +29,14 @@
 
 .item {
   padding-bottom: var(--mantine-spacing-lg);
+}
+
+.title {
+  @include light {
+    color: var(--mantine-color-gray-9);
+  }
+
+  @include dark {
+    color: var(--mantine-color-gray-5);
+  }
 }
