--- a/src/components/JobLocation/JobLocationHeader/JobLocationHeader.module.scss
+++ b/src/components/JobLocation/JobLocationHeader/JobLocationHeader.module.scss
@@ -4,7 +4,14 @@
   left: 0;
   right: 0;
 
-  background-color: var(--mantine-color-white);
+  @include light {
+    background-color: var(--mantine-color-white);
+  }
+
+  @include dark {
+    background-color: var(--mantine-color-gray-8);
+  }
+
   z-index: var(--mantine-z-index-popover);
 
   @include smaller-than($mantine-breakpoint-md) {
@@ -37,13 +44,26 @@
   }
 }
 .navbarItem {
-  color: var(--mantine-color-gray-6);
+  @include light {
+    color: var(--mantine-color-gray-6);
+  }
+
+  @include dark {
+    color: var(--mantine-color-gray-5);
+  }
+
   cursor: pointer;
   font-weight: 500;
 }
 
 .active {
-  color: var(--mantine-color-black);
+  @include light {
+    color: var(--mantine-color-black);
+  }
+  @include dark {
+    color: var(--mantine-color-white);
+  }
+
   position: relative;
 
   &:before {
@@ -57,6 +77,7 @@
 
     top: calc(-1 * var(--mantine-spacing-lg) - rem(7px));
     background-color: var(--mantine-color-indigo-6);
+
     @include border-bottom-radius();
   }
 }
@@ -65,7 +86,17 @@
   box-sizing: border-box;
 
   cursor: pointer;
-  border: 1px solid var(--mantine-color-gray-4);
+  border-width: 1px;
+  border-style: solid;
+
+  @include light {
+    border-color: var(--mantine-color-gray-4);
+  }
+
+  @include dark {
+    border-color: var(--mantine-color-gray-6);
+  }
+
   @include border-radius(var(--mantine-radius-md));
   padding: calc(var(--mantine-spacing-xs) / 3);
   margin-left: auto;
@@ -73,11 +104,27 @@
 
 .notificationsTarget {
   stroke-width: 1;
-  color: var(--mantine-color-blue-4);
+
+  @include light {
+    color: var(--mantine-color-blue-4);
+  }
+
+  @include dark {
+    color: var(--mantine-color-gray-4);
+  }
+
   padding: rem(1px);
 }
+
 .separator {
-  color: var(--mantine-color-gray-4);
+  @include light {
+    color: var(--mantine-color-gray-4);
+  }
+
+  @include dark {
+    color: var(--mantine-color-gray-3);
+  }
+
   transform: rotate(90deg);
 }
 
